fix(admin): table container overflow auto

--- a/src/theme.less
+++ b/src/theme.less
@@ -178,6 +178,10 @@ a.ant-btn {
     box-shadow: var(--shadow-sm);
   }
 }
+
+.ant-table-container {
+  overflow: auto;
+}
 .ant-table-container .ant-table-content table {
   min-width: max-content;
 }
